src/main/resources/static/css/newscache.css
#search{
    display:block;
    text-align:center;
    margin-right: 5%;
}

.jumbotron{
    background-size: cover;
    margin-left: 10%;
    margin-right: 10%;
}

.story-block{
    height: 150%;
}

.subscribe{
    display: inline-block;
    padding: 5% 5% 20%;
    background-color: rgba(204, 204, 179, 0.95);
    margin-bottom: 10%;
}

.panel-default > .panel-heading{
    color: #fff;
    background-color: #337ab7;
    border-color: #2e6da4;
}

/*.panel-group{*/
    /*display: inline-block;*/
    /*width: calc(100%/3);*/
    /*padding-left: 2%;*/
    /*padding-right: 2%;*/
/*}*/

@media (max-width: 975px) {
    .navbar-header {
        float: none;
    }
    .navbar-toggle {
        display: block;
    }
    .navbar-collapse {
        border-top: 1px solid transparent;
        box-shadow: inset 0 1px 0 rgba(255,255,255,0.1);
    }
    .navbar-collapse.collapse {
        display: none!important;
    }
    .navbar-nav {
        float: none!important;
        margin: 7.5px -15px;
    }
    .navbar-nav>li {
        float: none;
    }
    .navbar-nav>li>a {
        padding-top: 10px;
        padding-bottom: 10px;
    }
    .navbar-text {
        float: none;
        margin: 15px 0;
    }
    /* since 3.1.0 */
    .navbar-collapse.collapse.in {
        display: block!important;
    }
    .collapsing {
        overflow: hidden!important;
    }
}

.my-dialog > .modal-dialog{
    width: 1200px;
    height: 2600px;
}

